i change some width

--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
               <div class="services_content">
                 <div>
                     <i class="uil uil-pen services_icon"></i>
-                   <h3 class="services_tittle">Branding <br>Designer</h3>
+                   <h3 class="services_tittle">Web <br>Development</h3>
                 </div>
                 <span class="button button--flex button--small button--link services_button">
                     View More
