--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
                     </a>
                 </div>
             </div>
-            <p class="footer_copy">&copy; Proficient.ng. All right reserved</p>
+            <p class="footer_copy">&copy; Proficientng.com All right reserved</p>
         </div>
     </footer>
 
