--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                 
                 <div class="home_data">
-                    <h1 class="home_title">Hi I'am Proficient</h1>
+                    <h1 class="home_title">Hi Mustapha Nurudeen</h1>
                     <h3 class="home_subtitle">Fontend and Backend Developer</h3>
                     <p class="home_discription">  <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Proficient Adebayour.", "I am Creative.", "I am Web Design.", "I am a  Programmer from kwara state.", "I Love to Develop." ]'>
                         <span class="wrap"></span>
@@ -155,7 +155,7 @@
 
               <div class="about_data">
                   <p class="about_discription">Web developer, with extensive knowledge and experience in 
-                      web technologies and ui / ux Design, delivering quality work.</p>
+                      web technologies and delivering quality work.</p>
 
                   <div class="about_info">
                       <div>
@@ -905,8 +905,7 @@
                     <li><a href="#portfolio" class="footer_link">Portfolio</a></li>
 
                     <li><a href="#contact" class="footer_link">Contact me</a></li>
-                    <li> <a download="/app-final-apk-61dc06a5f0a24-1641809573.apk" href="application/app-final-apk-61dc06a5f0a24-1641809573.apk" class="footer_link">Download My Application for APK</li>
-                </ul>
+                      </ul>
                 <div class="footer_socials">
                     <a href="https://www.facebook.com" target="_blank"  class="footer_social">
                         <i class="uil uil-facebook-f"></i>
